added login boxes, updated landing page layout

--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -2,13 +2,63 @@
 
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">Navigate...</h3>
+            <h2 class="panel-title">Select a Module</h2>
         </div>
-        <div class="panel-body panel-landing-controls">
-            <button class="btn btn-primary btn-lg" ng-click="operatorControl()">Operator Control</button>
-            <button class="btn btn-primary btn-lg">Health and State</button>
-            <button class="btn btn-primary btn-lg">Weather</button>
-            <button class="btn btn-primary btn-lg" ng-click="about()">About</button>
-        </div>
+        <table class="table">
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg" ng-click="operatorControl()">Operator Control</button>
+                        <button class="btn btn-primary btn-lg">Alarms</button>
+                        <button class="btn btn-primary btn-lg">Health and State</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg">Schedules</button>
+                        <button class="btn btn-primary btn-lg">Weather</button>
+                        <button class="btn btn-primary btn-lg">Sensor Graphs</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg">Operator Shifts</button>
+                        <button class="btn btn-primary btn-lg">Log Reports</button>
+                        <button class="btn btn-primary btn-lg">Source Catalogues</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="panel-body panel-landing-controls">
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                        <button class="btn btn-primary btn-lg"></button>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
