--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="camgui">
+<html ng-app="katGui">
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
