--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/about/about.js"></script>
 <script src="app/weather/weather.js"></script>
+<script src="app/operator-control/receptor-state/receptor-state.js"></script>
+<script src="app/operator-control/receptors/receptors.js"></script>
 <!-- Add New Component JS Above -->
 
 <nav class="navbar navbar-default" role="navigation" ng-show="userLoggedIn">
