--- a/app/operator-control/receptor-state/receptor-state.html
+++ b/app/operator-control/receptor-state/receptor-state.html
@@ -1,5 +1,5 @@
 <div class="receptor-state-div">
-    <h3>{{receptor.name}}</h3>
-    <span>{{receptor.state}}</span>
-    <span ng-show="receptor.inhibited" class="inhibited">Inhibited</span>
+    <h3>{{name}}</h3>
+    <span>{{state}}</span>
+    <span ng-if="inhibited" class="inhibited">Inhibited</span>
 </div>
