button sizes to emphasize importance

--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -7,7 +7,7 @@
         <table class="table">
             <tr>
                 <td>
-                    <div class="panel-body panel-landing-controls">
+                    <div class="panel-body panel-landing-controls-large">
                         <button class="btn btn-primary btn-lg" ng-click="operatorControl()">Operator Control</button>
                         <button class="btn btn-primary btn-lg">Alarms</button>
                         <button class="btn btn-primary btn-lg">Health and State</button>
@@ -16,49 +16,49 @@
             </tr>
             <tr>
                 <td>
-                    <div class="panel-body panel-landing-controls">
-                        <button class="btn btn-primary btn-lg">Schedules</button>
-                        <button class="btn btn-primary btn-lg">Weather</button>
-                        <button class="btn btn-primary btn-lg">Sensor Graphs</button>
+                    <div class="panel-body panel-landing-controls-medium">
+                        <button class="btn btn-primary">Schedules</button>
+                        <button class="btn btn-primary">Weather</button>
+                        <button class="btn btn-primary">Sensor Graphs</button>
                     </div>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <div class="panel-body panel-landing-controls">
-                        <button class="btn btn-primary btn-lg">Operator Shifts</button>
-                        <button class="btn btn-primary btn-lg">Log Reports</button>
-                        <button class="btn btn-primary btn-lg">Source Catalogues</button>
+                    <div class="panel-body panel-landing-controls-small">
+                        <button class="btn btn-primary">Operator Shifts</button>
+                        <button class="btn btn-primary">Log Reports</button>
+                        <button class="btn btn-primary">Source Catalogues</button>
                     </div>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls">
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls">
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls">
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                        <button class="btn btn-primary btn-lg"></button>
-                    </div>
-                </td>
-            </tr>
+            <!--<tr>-->
+                <!--<td>-->
+                    <!--<div class="panel-body panel-landing-controls">-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                    <!--</div>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td>-->
+                    <!--<div class="panel-body panel-landing-controls">-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                    <!--</div>-->
+                <!--</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td>-->
+                    <!--<div class="panel-body panel-landing-controls">-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                        <!--<button class="btn btn-primary btn-lg"></button>-->
+                    <!--</div>-->
+                <!--</td>-->
+            <!--</tr>-->
         </table>
     </div>
 </div>
