playing around with d3 charts

--- a/app/landing/landing.html
+++ b/app/landing/landing.html
@@ -19,7 +19,7 @@
                     <div class="panel-body panel-landing-controls-medium">
                         <button class="btn btn-primary">Schedules</button>
                         <button class="btn btn-primary">Weather</button>
-                        <button class="btn btn-primary">Sensor Graphs</button>
+                        <button class="btn btn-primary" ng-click="changeState('sensorGraph')">Sensor Graphs</button>
                     </div>
                 </td>
             </tr>
