--- a/index.html
+++ b/index.html
@@ -46,14 +46,11 @@
 <script src="app/operator-control/receptor-state/receptor-state.js"></script>
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/util/focus-directive.js"></script>
-
-
 <script src="app/auth/auth-service.js"></script>
 <script src="app/auth/session-service.js"></script>
-
-
-
-
+<script src="app/sensor-graph/sensor-graph.js"></script>
+<script src="app/d3/d3-chart-directive.js"></script>
+<script src="app/d3/d3-service.js"></script>
 <!-- Add New Component JS Above -->
 
 <nav class="navbar navbar-default" role="navigation" ng-show="userLoggedIn">
