get data from katstore and display on d3

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/util/focus-directive.js"></script>
 <script src="app/auth/auth-service.js"></script>
+<script src="app/data/data-service.js"></script>
 <script src="app/auth/session-service.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/d3/d3-chart-directive.js"></script>
