moved each feature to its own module

--- a/login-form/login-form.html
+++ b/login-form/login-form.html
@@ -1,4 +1,4 @@
-<div class="" ui-view ng-controller="LoginFormCtrl">
+<div class="" ng-controller="LoginFormCtrl">
 
     <div class="panel-login panel panel-default">
         <div class="panel-heading">
