--- a/operator-control/receptor-state/receptor-state.html
+++ b/operator-control/receptor-state/receptor-state.html
@@ -1,7 +1,7 @@
 <div class="receptor-state-div">
     <h3>{{name}}</h3>
     <span>{{state}}</span>
-    <span ng-if="inhibited" class="inhibited">Inhibited</span>
+    <span ng-if="inhibited" ng-click="alertMessage()" class="inhibited">Inhibited</span>
 </div>
 
 <h1>{{message}}</h1>
