--- a/landing/landing.html
+++ b/landing/landing.html
@@ -8,7 +8,7 @@
             <tr>
                 <td>
                     <div class="panel-body panel-landing-controls-large">
-                        <button class="btn btn-primary btn-lg" ng-click="operatorControl()">Operator Control</button>
+                        <button class="btn btn-primary btn-lg" ng-click="stateGo('operatorControl')">Operator Control</button>
                         <button class="btn btn-primary btn-lg">Alarms</button>
                         <button class="btn btn-primary btn-lg">Health and State</button>
                     </div>
@@ -19,14 +19,14 @@
                     <div class="panel-body panel-landing-controls-medium">
                         <button class="btn btn-primary">Schedules</button>
                         <button class="btn btn-primary">Weather</button>
-                        <button class="btn btn-primary" ng-click="changeState('sensorGraph')">Sensor Graphs</button>
+                        <button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
                     </div>
                 </td>
             </tr>
             <tr>
                 <td>
                     <div class="panel-body panel-landing-controls-small">
-                        <button class="btn btn-primary">Operator Shifts</button>
+                        <button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
                         <button class="btn btn-primary">Log Reports</button>
                         <button class="btn btn-primary">Source Catalogues</button>
                     </div>
