--- a/landing/landing.html
+++ b/landing/landing.html
@@ -9,7 +9,7 @@
                 <td>
                     <div class="panel-body panel-landing-controls-large">
                         <button class="btn btn-primary btn-lg" ng-click="stateGo('operatorControl')">Operator Control</button>
-                        <button class="btn btn-primary btn-lg">Alarms</button>
+                        <button class="btn btn-primary btn-lg" ng-click="stateGo('alarms')">Alarms</button>
                         <button class="btn btn-primary btn-lg">Health and State</button>
                     </div>
                 </td>
