--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,6 +1,6 @@
-<div class="col-md-12" ng-controller="LandingCtrl">
+<div class="" ng-controller="LandingCtrl">
 
-    <div class="panel panel-default">
+    <div class="panel panel-primary panel-margin-top">
         <div class="panel-heading">
             <h2 class="panel-title">Select a Module</h2>
         </div>
