added a dashboard framework for the landing page

--- a/alarms/alarms.html
+++ b/alarms/alarms.html
@@ -1,6 +1,6 @@
 <div ng-controller="AlarmsCtrl">
 
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <div class="panel-heading">
             Alarms
         </div>
