--- a/landing/landing.html
+++ b/landing/landing.html
@@ -1,64 +1,5 @@
-<div class="" ng-controller="LandingCtrl">
+<div ng-controller="LandingCtrl">
 
-    <div class="panel panel-primary panel-margin-top">
-        <div class="panel-heading">
-            <h2 class="panel-title">Select a Module</h2>
-        </div>
-        <table class="table">
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls-large">
-                        <button class="btn btn-primary btn-lg" ng-click="stateGo('operatorControl')">Operator Control</button>
-                        <button class="btn btn-primary btn-lg" ng-click="stateGo('alarms')">Alarms</button>
-                        <button class="btn btn-primary btn-lg">Health and State</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls-medium">
-                        <button class="btn btn-primary">Schedules</button>
-                        <button class="btn btn-primary">Weather</button>
-                        <button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="panel-body panel-landing-controls-small">
-                        <button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
-                        <button class="btn btn-primary">Log Reports</button>
-                        <button class="btn btn-primary">Source Catalogues</button>
-                    </div>
-                </td>
-            </tr>
-            <!--<tr>-->
-                <!--<td>-->
-                    <!--<div class="panel-body panel-landing-controls">-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                    <!--</div>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td>-->
-                    <!--<div class="panel-body panel-landing-controls">-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                    <!--</div>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td>-->
-                    <!--<div class="panel-body panel-landing-controls">-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                        <!--<button class="btn btn-primary btn-lg"></button>-->
-                    <!--</div>-->
-                <!--</td>-->
-            <!--</tr>-->
-        </table>
-    </div>
+    <adf-dashboard name="{{name}}" adf-model="dashboardModel"></adf-dashboard>
+
 </div>
